@@ -31,5 +31,5 @@ CIAO_DUMP_SAMPLE_HISTORY<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
     Reverse the above changes.
   </ul>
 
-  <b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@cse.wustl.edu</ADDRESS>
+  <b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@list.isis.vanderbilt.edu</ADDRESS>
 </body> </html>
