@@ -229,7 +229,7 @@ about how to use this feature, please refer to the ReDaC-Usage-Example.html unde
 <br><br>
 
 <hr>
-<b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@cse.wustl.edu</ADDRESS>
+<b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@list.isis.vanderbilt.edu</ADDRESS>
 </body>
 </html>
 
